--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "start": "vite"
-},
-
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "vite"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
@@ -23,6 +22,7 @@
     "react-router-dom": "^7.9.3",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
+    "recharts": "^3.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "imagemin": "^9.0.1",
-    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webp": "^6.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
