--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://192.168.1.114:8080/mechyam
+#VITE_API_BASE_URL=http://192.168.1.114:8080/mechyam
+VITE_API_BASE_URL=https://mechyam-backend-production.up.railway.app/mechyam
