--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=http://192.168.1.114:8080/mechyam
+#  VITE_API_BASE_URL=http://your-project-name.up.railway.app/mechyam
+# VITE_API_BASE_URL=http://198.162.1.114:8080/mechyam
+VITE_API_BASE_URL=http://mechyam-backend.up.railway.app/
